Instrument ZIO metric registry poller